--- a/ChatCord/_html_css/chat.html
+++ b/ChatCord/_html_css/chat.html
@@ -10,7 +10,8 @@
 <body>
   <div class="chat-container">
     <header class="chat-header">
-      <h1><i class="fas fa-smile"></i> Meet web Chat</h1>
+      <h1><i class=" "></i> Meet web Chat</h1>
+      <h1> <img src="videocamera.png" alt=" "></h1>
       <a href="index.html" class="btn">Leave Room</a>
     </header>
     <main class="chat-main">
